# generative-model-evaluation-toolkit

./: .gitignore  README.md  config.yaml  config_exp1.yaml  generate.submit  pyproject.toml  temp.jsonl  test.tex  todo
docs/: architecture.md  howto.md
experiments/: config_evaluate_local_generated.yaml  config_exp1.yaml  config_exp2.yaml  config_exp3.yaml  config_generation.yaml  config_quantify_local.yaml
experiments/animal_detection/: config_evaluate_flux_animal.yaml  config_evaluate_flux_count.yaml  config_evaluate_flux_count_cpcc.yaml  config_evaluate_stable-cascade_animal.yaml  config_evaluate_stable-cascade_count.yaml  config_evaluate_stable-diffuion_animal.yaml  config_evaluate_stable-diffuion_count.yaml  config_generate.yaml
experiments/archive/: TEST_bcc_llama2.yaml  config_1_generate.yaml  config_binary_pipeline_llama2_cpcc.yaml  config_generate.yaml  test_evaluate_flux.yaml  test_evaluate_stable-diffusion.yaml
experiments/sentiment_analysis/: config_1_generate.yaml  config_2_annotate.yaml  config_3_evaluate.yaml  config_4_quantify.yaml  config_5_plots.yaml  config_binary_pipeline.yaml  config_binary_pipeline_llama2.yaml  config_binary_pipeline_llama2_LLM.yaml  config_binary_pipeline_llama3-3.yaml  config_binary_pipeline_mistral.yaml
notebooks/paper/: fig_2_corret-sentiment.ipynb  fig_2_desired-label_human-judgement.ipynb  tab_10_subsampling.ipynb  tab_11_bcc-improvied.ipynb  tab_4_tpr-fpr.ipynb  tab_5_gen-match.ipynb  tab_6_tpr-fpr_image-cls.ipynb  tab_7_jensen-shannon.ipynb  tab_7_jensen-shannon.json  tab_8_measurability.ipynb  tab_9_sample-value.ipynb  text_kappa.ipynb
notebooks/plot/: plot_binary_distribtuions.ipynb  plot_cls_report.ipynb  plot_subsampling_confidence.ipynb
package/cgeval/: README.md  pyproject.toml
package/cgeval/src/cgeval/: __init__.py  evaluation.py
package/cgeval/src/cgeval/classifier/: __init__.py  ollama_classifier.py  ollama_image_classifier.py  transformer_image_classifier.py  transformers_classifier.py  vit_classifier.py  yolo_classifier.py
package/cgeval/src/cgeval/core/: classifier.py  dataset.py  model.py  quantification_method.py  report.py
package/cgeval/src/cgeval/dataset/: __init__.py  huggingface_dataset.py  local_image_dataset.py  local_text_dataset.py
package/cgeval/src/cgeval/distribution/: __init__.py  beta.py
package/cgeval/src/cgeval/method/: __init__.py  bcc.py  classification.py  classify_and_count.py  cpcc.py
package/cgeval/src/cgeval/model/: __init__.py  diffusion_model.py  flux_model.py  ollama_model.py  stable_cascade_model.py  transformers_language_model.py
package/cgeval/src/cgeval/rating/: __init__.py  rating.py
package/cgeval/src/cgeval/report/: __init__.py  bcc_report.py  binary_plot.py  count_report.py  cpcc_report.py  generic_report.py  multiclass_report.py  ternary_plot.py
src/uv_workspaces/: __init__.py  all.py  annotate.py  evaluate.py  generate.py  plot.py  quantify.py
(+1 files in other folders)
